--- a/contato.html
+++ b/contato.html
@@ -44,19 +44,26 @@
               <h3 class="masthead-brand">Oneide L. Schneider</h3>
               <nav>
                 <ul class="nav masthead-nav">
-                  <li class="active"><a href="#">Home</a></li>
-                  <li><a href="contato.html">Contato</a></li>
+                  <li><a href="index.html">Home</a></li>
+                  <li class="active"><a href="contato.html">Contato</a></li>
                 </ul>
               </nav>
             </div>
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">Sobre</h1>
-            <p class="lead">Blog pessoal e profissional</p>
+            <h1 class="cover-heading">Contato</h1>
             <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Sobre</a>
-            </p>
+			E-mail  :  oneidels@gmail.com
+			Itapiranga/Chapecó – SC
+
+			Currículo Lattes : http://lattes.cnpq.br/7705457645590712
+			GitHub : https://github.com/OneideLuizSchneider/ 
+			Twitter: https://twitter.com/oneideschneider
+			Linkedin: http://br.linkedin.com/in/oneideluizschneider
+			Facebook: https://www.facebook.com/OneideLuizSchneider
+			</p>
+
           </div>
 
           <div class="mastfoot">
