--- a/contato.html
+++ b/contato.html
@@ -54,14 +54,14 @@
           <div class="inner cover">
             <h1 class="cover-heading">Contato</h1>
             <p class="lead">
-			E-mail  :  oneidels@gmail.com
-			Itapiranga/Chapecó – SC
+			E-mail  :  oneidels@gmail.com<br />
+			Itapiranga/Chapecó – SC<br /><br />
 
-			Currículo Lattes : http://lattes.cnpq.br/7705457645590712
-			GitHub : https://github.com/OneideLuizSchneider/ 
-			Twitter: https://twitter.com/oneideschneider
-			Linkedin: http://br.linkedin.com/in/oneideluizschneider
-			Facebook: https://www.facebook.com/OneideLuizSchneider
+			Currículo Lattes : <a href="http://lattes.cnpq.br/7705457645590712">http://lattes.cnpq.br/7705457645590712</a><br />
+			GitHub : <a href="https://github.com/OneideLuizSchneider/">https://github.com/OneideLuizSchneider/</a><br />
+			Twitter: <a href="https://twitter.com/oneideschneider">https://twitter.com/oneideschneider</a><br />
+			Linkedin: <a href="http://br.linkedin.com/in/oneideluizschneider">http://br.linkedin.com/in/oneideluizschneider</a><br />
+			Facebook: <a href="https://www.facebook.com/OneideLuizSchneider">https://www.facebook.com/OneideLuizSchneider</a>
 			</p>
 
           </div>
